--- a/GarciaMariaPablo/src/main/resources/templates/user/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/_fragments/header.html
@@ -103,7 +103,7 @@
                             <h6 class="card-title"><i class="bi bi-info-circle me-2"></i>Información rápida</h6>
                             <p class="small text-muted">Aquí puedes acceder a todas las opciones del sistema de gestión
                                 de incidencias.</p>
-                            <a href="#" class="btn btn-sm btn-outline-main w-100">Ver tutorial</a>
+                            <a href="https://github.com/Kuro-0-0/TFC-DAM1/blob/main/README.md" class="btn btn-sm btn-outline-main w-100">Ver tutorial</a>
                         </div>
                     </div>
                 </li>
