--- a/GarciaMariaPablo/src/main/resources/templates/user/incidencia/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/incidencia/formulario.html
@@ -43,8 +43,7 @@
                             <div class="mb-4">
                                 <label for="titulo" class="form-label fw-bold">Título <span
                                         class="text-danger">*</span></label>
-                                <input type="text" class="form-control" th:field="*{titulo}" required
-                                    placeholder="Ej: Problema con el sistema de facturación">
+                                <input type="text" class="form-control" th:field="*{titulo}" required maxlength="50">
                             </div>
 
                             <div class="mb-4">
