--- a/GarciaMariaPablo/src/main/resources/templates/user/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/incidencia/listar.html
@@ -149,7 +149,7 @@
                                     </div>
                                 </div>
                                 <div class="dropdown dropstart">
-                                    <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button"
+                                    <button class="btn btn-sm btn-outline-secondary" type="button"
                                         data-bs-toggle="dropdown">
                                         <i class="bi bi-three-dots-vertical"></i>
                                     </button>
