--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
@@ -4,8 +4,8 @@
 
             <a class="navbar-brand fw-bold d-flex align-items-center" href="../otros/dashboard.html" th:href="@{/admin/dashboard}"
                 title="Ir a la página principal del sistema">
-                <i class="bi bi-shield-exclamation me-2"></i>
-                Gestor de Incidencias
+                <i class="bi bi-person-fill-gear me-2"></i>
+                Panel de Administración
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
