--- a/GarciaMariaPablo/src/main/resources/templates/global/index.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/index.html
@@ -238,9 +238,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="mt-4 mb-0 small text-muted">* El acceso debe ser autorizado por el administrador
-                                de tu
-                                empresa</p>
+                            <p class="mt-4 mb-0 small text-muted">* El acceso de tecnico debe ser autorizado por el administrador de tu empresa</p>
                         </div>
                     </div>
                 </div>
