--- a/GarciaMariaPablo/src/main/resources/templates/global/perfil.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/perfil.html
@@ -8,11 +8,6 @@
     <meta name="description" content="Gestiona tu perfil de usuario">
     <title>Mi Perfil | Gestión de Incidencias</title>
     <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
-    <!-- <style>
-        .profile-header {
-            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-        }
-    </style> -->
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
@@ -145,7 +140,7 @@
                                     <div class="col-md-6 mb-4">
                                         <div class="card border-0 shadow-sm h-100">
                                             <div class="card-body">
-                                                <h3 class="h6 text-muted"><i class="bi bi-clock me-2"></i>Tiempo
+                                                <h3 class="h6 text-muted"><i class="bi bi-clock me-2" title="Tiempo medio desde la apertura hasta el cierre de una incidencia"></i>Tiempo
                                                     promedio</h3>
                                                 <div class="d-flex align-items-center mt-3">
                                                     <div class="bg-info bg-opacity-10 p-3 rounded me-3">
