--- a/GarciaMariaPablo/src/main/resources/templates/user/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/user/_fragments/header.html
@@ -1,10 +1,10 @@
 <th:block th:fragment="headerOff">
 
-    <header class="navbar navbar-expand-lg navbar-dark bg-main shadow-lg">
+    <header class="navbar navbar-expand-lg navbar-dark bg-main shadow-lg px-3">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="../otros/dashboard.html" th:href="@{/user/dashboard}">
-                <i class="bi bi-shield-check fs-3 me-2"></i>
-                <span class="fw-bold">Gestión de Incidencias</span>
+                <i class="bi bi-person-fill"></i>
+                <span class="fw-bold">Panel de Usuario</span>
             </a>
 
             <button class="navbar-toggler order-lg-1" type="button" data-bs-toggle="offcanvas"
